Rev: Notification Menu is ready

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -187,6 +187,12 @@
 
 /* Notifications */
 
+.notification-default-mute-indicator {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
 .notification-menu {
   width: 360px;
   min-height: 320px;
