--- a/stylesheet.css
+++ b/stylesheet.css
@@ -167,6 +167,12 @@
   margin: 0;
 }
 
+.notification-menu-scroll-view StScrollBar {
+  min-width: 0;
+  min-height: 0;
+  opacity: 0;
+}
+
 .notification-menu .message {
   border-radius: 12px;
 }
